# west

./: .gitignore  README.md  logging.yaml  pyproject.toml
.github/workflows/: build.yaml
docker/: Dockerfile  entrypoint.sh  logging.yaml
docker/etc/: Caddyfile
west/: config.py  main.py  utils.py
west/cli/: main.py
