[tool.poetry]
name = "west"
version = "0.1.0"
description = ""
authors = ["Eugen Ciur <eugen@papermerge.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^13.1"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
setuptools = "^75.2.0"
redis = "^5.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
